3.ingress.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: api-gateway-system-tmaxcloud@kubernetescrd
  name: nginx-service
  namespace: test
spec:
  selector:
    app: nginx
  ports:
    - name: https
      port: 443
      targetPort: 443
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: tmax-cloud
  rules:
    - host: nginx.tmaxcloud.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 443
  tls:
  - hosts:
    - nginx.tmaxcloud.org
